# gauntlet

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  SCOPE.md  TODO-v2.md  TODO-v3.md  TODO-v4.md  TODO.md  coverage.xml  docker-compose.yml  main.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.flux_gate/specs/: task_completion_tampering.yaml  task_creation_integrity.yaml  task_ownership.yaml  task_read_isolation.yaml
.gauntlet/guards/: task_completion_tampering.yaml  task_creation_integrity.yaml  task_ownership.yaml  task_read_isolation.yaml
.gauntlet/specs/: completed-status-toggles-correctly.yaml  task-title-is-required-on-creation.yaml  users-cannot-read-each-others-tasks.yaml
.github/workflows/: ci.yml  trufflehog.yml
agents/: gauntlet-attacker.md  gauntlet-holdout-evaluator.md  gauntlet-inspector.md
demo_api/: server.py
docs/: architecture.md  development.md  hardening-prompt-template.md  usage.md
flux_gate/: __init__.py  auth.py  cli.py  executor.py  llm.py  loop.py  models.py  roles.py
gauntlet/: __init__.py  _log.py  _plausibility.py  auth.py  cli.py  executor.py  http.py  llm.py  loop.py  models.py  openapi.py  roles.py  runs.py  server.py  store.py
gauntlet/adapters/: __init__.py  cli.py  http.py  webdriver.py
gauntlet/schemas/: arsenal.schema.json
scripts/: run_arsenal.py
skills/gauntlet/: SKILL.md
skills/gauntlet-author/: SKILL.md
tests/: test_auth.py  test_cli_config.py  test_coverage_gaps.py  test_docker.py  test_executor.py  test_final_clearance.py  test_flux_gate.py  test_gauntlet.py  test_http.py  test_logging.py  test_loop_intelligence.py  test_loop_properties.py  test_openapi.py  test_plausibility.py  test_runs.py  test_skills.py  test_subagents.py
